Add new task, get all tasks

--- a/WebClient/Components/TaskListerComponent.razor
+++ b/WebClient/Components/TaskListerComponent.razor
@@ -58,5 +58,5 @@
 </div>
 
 @code  {
-    [Parameter] public TaskModel[] Tasks { get; set; }
+    [Parameter] public List<TaskModel> Tasks { get; set; }
 }
