update task is complete, delete task

--- a/WebClient/Components/TaskListerComponent.razor
+++ b/WebClient/Components/TaskListerComponent.razor
@@ -43,7 +43,7 @@
     {
         <div class="task-item p-3 my-3 row m-0">
             <div class="col-10 p-0">
-                <Check TValue="bool" Checked="@item.isDone" CheckedChanged="@(val => item.isDone = val)">
+                <Check TValue="bool" Checked="@item.isDone" CheckedChanged="@(val => onUpdateClick(item, val))">
                     <span class="@(item.isDone ? "done-text" : "")">@item.text</span>
                 </Check>
             </div>
@@ -51,7 +51,9 @@
                 @if (item.member != null) {
                     <div class="avtar mr-1" style="background-color: @item.member.avtar;"></div>
                 }
-                <img class="delete-icon" src="/assets/images/delete-icon.svg"/>
+            <button class="btn btn-default" @onclick="@(val => onDeleteClick(item))">
+                <img class="delete-icon" src="/assets/images/delete-icon.svg" />
+            </button>
             </div>
         </div>
     }
@@ -59,4 +61,15 @@
 
 @code  {
     [Parameter] public List<TaskModel> Tasks { get; set; }
+    [Parameter] public EventCallback<TaskModel> onDeleteCallback { get; set; }
+    [Parameter] public EventCallback<TaskModel> onUpdateCallback { get; set; }
+    private async void onDeleteClick(TaskModel item)
+    {
+        await onDeleteCallback.InvokeAsync(item);
+    }
+    private async void onUpdateClick(TaskModel item, Boolean val)
+    {
+        item.isDone = val;
+        await onUpdateCallback.InvokeAsync(item);
+    }
 }
